fix card word wrap

--- a/src/app/ui/list/list.component.scss
+++ b/src/app/ui/list/list.component.scss
@@ -27,3 +27,35 @@
     width: calc(50% - 0.5rem - 1rem - 1rem);
   }
 }
+
+.card-header {
+  word-break: break-all;
+  font-size: 0.7rem;
+}
+
+.card-title {
+  word-break: break-all;
+}
+
+.card-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 0.2rem;
+  align-items: end;
+}
+
+.card-footer-tags {
+  text-align: right;
+  font-size: 0.7rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.2rem;
+  flex-wrap: wrap;
+}
+
+.card-footer-date {
+  text-align: right;
+  font-size: 0.7rem;
+  flex: 1 0 auto;
+}
